--- a/src/app/features/searching/search-results/search-results-row/search-results-row.component.html
+++ b/src/app/features/searching/search-results/search-results-row/search-results-row.component.html
@@ -1,14 +1,18 @@
 <div class="repo-container">
   <div class="atom-container">
-    <label>Name</label>
+    <label>Name:</label>
     <span>{{data.name}}</span>
   </div>
   <div class="atom-container">
-    <label>Owner</label>
+    <label>Owner:</label>
     <span>{{data.owner.login}}</span>
   </div>
   <div class="atom-container">
-    <label>Language</label>
+    <label>Language:</label>
     <span>{{data.language}}</span>
+  </div>
+  <div class="atom-container">
+    <label>Forks:</label>
+    <span>{{data.forks_count}}</span>
   </div>
 </div>
