--- a/src/app/features/searching/searching.component.html
+++ b/src/app/features/searching/searching.component.html
@@ -1,2 +1,4 @@
+
 <app-searching-line></app-searching-line>
-<app-search-results></app-search-results>
+<app-content-container></app-content-container>
+
