--- a/src/app/features/searching/search-results/search-results.component.html
+++ b/src/app/features/searching/search-results/search-results.component.html
@@ -1,1 +1,7 @@
-<app-search-results-row [data]="repo" *ngFor="let repo of (repos | async)"></app-search-results-row>
+<cdk-virtual-scroll-viewport #scroll appendOnly itemSize="88" class="viewport" (scrolledIndexChange)="scrolledIndexChange()">
+  <app-search-results-row *cdkVirtualFor="let repo of (repos | async)" [data]="repo" (click)="showDetails(repo)"></app-search-results-row>
+  <div style="min-height: 90px" *ngIf="(loading | async) && dataLength" class="loader-container">
+    <app-spinner ></app-spinner>
+  </div>
+</cdk-virtual-scroll-viewport>
+
